# fragnix

./: .gitignore  .gitmodules  .travis.yml  Fav.hs  LICENSE  Main.hs  README.md  extractmodules.sh  fragnix.cabal  stack.yaml  testElm.sh
.github/workflows/: ci.yml
app/: Build.hs  CreateEnv.hs  Get.hs  GraphViz.hs  Init.hs  Main.hs  Preprocess.hs  Remove.hs  Show.hs  Update.hs  Utils.hs
benchmarks-src/: Main.hs
benchmarks/containers/: Data.Array.Base.hs  Data.Array.IArray.hs  Data.Array.MArray.Safe.hs  Data.Array.Storable.Internals.hs  Data.Graph.hs  Data.IntMap.Lazy.hs  Data.IntMap.Strict.hs  Data.IntMap.hs  Data.IntSet.hs  Data.Map.hs  Data.Utils.StrictPair.hs  Main.hs
builtins/: README.md  extract_cbits.hs
builtins/base/: Control.Applicative.hs  Control.Arrow.hs  Control.Category.hs  Control.Concurrent.MVar.hs  Control.Concurrent.QSem.hs  Control.Concurrent.QSemN.hs  Control.Concurrent.hs  Control.Exception.Base.hs  Control.Exception.hs  Control.Monad.Fix.hs  Control.Monad.Instances.hs  Control.Monad.ST.Imp.hs  Control.Monad.ST.Lazy.Imp.hs  Control.Monad.ST.Lazy.Safe.hs  Control.Monad.ST.Lazy.Unsafe.hs  Control.Monad.ST.Safe.hs  Control.Monad.ST.Strict.hs  Control.Monad.ST.Unsafe.hs  Control.Monad.ST.hs  Control.Monad.hs  Data.Bifunctor.hs  Data.Bits.hs  Data.Char.hs  Data.Coerce.hs  Data.Complex.hs  Data.Data.hs  Data.Dynamic.hs  Data.Either.hs  Data.Foldable.hs  Data.Function.hs  Data.Functor.Classes.hs  Data.Functor.Compose.hs  Data.Functor.Const.hs  Data.Functor.Identity.hs  Data.Functor.Product.hs  Data.Functor.Sum.hs  Data.Functor.hs  Data.Int.hs  Data.Kind.hs  Data.List.hs  (+124 more)
builtins/cbits/: HsUnixCompat.c  conv.c  zlib-helper.c
builtins/ghc-prim/: GHC.CString.hs  GHC.Classes.hs  GHC.Debug.hs  GHC.IntWord64.hs  GHC.Magic.hs  GHC.Prim.hs  GHC.Types.hs
builtins/include/: HsProcessConfig.h  config.h  primitive-memops.h
builtins/integer-gmp/: GHC.Integer.GMP.Internals.hs  GHC.Integer.Logarithms.Internals.hs  GHC.Integer.Logarithms.hs  GHC.Integer.Type.hs  GHC.Integer.hs
executable-src/: Main.hs
fragnix/builtin/: Prelude.names  packages.db
fragnix/builtin_environment/: Control.Applicative  Control.Concurrent  Control.Concurrent.MVar  Control.Exception  Control.Exception.Base  Control.Monad  Control.Monad.Fail  Control.Monad.Instances  Control.Monad.ST  Control.Monad.ST.Imp  Control.Monad.ST.Lazy  Control.Monad.ST.Lazy.Safe  Control.Monad.ST.Lazy.Unsafe  Control.Monad.ST.Strict  Control.Monad.ST.Unsafe  Data.Array.IO.Safe  Data.Array.MArray.Safe  Data.Array.ST  Data.Array.Storable.Safe  Data.Array.Unboxed  Data.Bifunctor  Data.Bits  Data.Bool  Data.Char  Data.Coerce  Data.Data  Data.Dynamic  Data.Either  Data.Eq  Data.Fixed  Data.Foldable  Data.Function  Data.Functor  Data.Functor.Classes  Data.Functor.Compose  Data.Functor.Const  Data.Functor.Identity  Data.Functor.Product  Data.Functor.Sum  Data.Ix  (+126 more)
fragnix/cbits/: HsUnix.c  conv.c  dirUtils.c  directory.c  execvpe.c  fnv.c  ghcrts.c  myfree.c  primitive-memops.c  runProcess.c  text-helper.c
fragnix/include/: HsBaseConfig.h  HsDirectory.h  HsDirectoryConfig.h  HsIntegerGmp.h  HsNetworkConfig.h  HsTimeConfig.h  HsUnix.h  HsUnixConfig.h  cabal_macros.h  execvpe.h  myfree.h  processFlags.h  runProcess.h
fragnix/packagedb/: packages.db
fragnix/primitive/: Control.Applicative  Control.Arrow  Control.Category  Control.Concurrent  Control.Concurrent.Chan  Control.Concurrent.QSem  Control.Concurrent.QSemN  Control.Exception.Base  Control.Monad  Control.Monad.Fix  Control.Monad.Instances  Control.Monad.ST  Control.Monad.ST.Imp  Control.Monad.ST.Lazy.Imp  Control.Monad.ST.Lazy.Safe  Control.Monad.ST.Safe  Control.Monad.ST.Strict  Control.Monad.ST.Unsafe  Data.Array  Data.Array.Base  Data.Array.IArray  Data.Array.IO.Safe  Data.Array.MArray  Data.Array.ST  Data.Array.ST.Safe  Data.Array.Storable  Data.Array.Unboxed  Data.Bits  Data.Bool  Data.Complex  Data.Data  Data.Either  Data.Eq  Data.Function  Data.Functor  Data.IORef  Data.Int  Data.List  Data.Maybe  Data.Monoid  (+108 more)
fragnix/primitive_names/: Control.Category  Control.Concurrent  Control.Concurrent.MVar  Control.Monad.ST.Imp  Control.Monad.ST.Lazy  Control.Monad.ST.Safe  Control.Monad.ST.Unsafe  Data.Array  Data.Array.IO  Data.Array.IO.Internals  Data.Array.IO.Safe  Data.Array.Storable.Internals  Data.Array.Unsafe  Data.Bits  Data.Complex  Data.Dynamic  Data.Either  Data.Foldable  Data.Functor  Data.OldTypeable  Data.OldTypeable.Internal  Data.Ratio  Data.STRef  Foreign.C.String  Foreign.Marshal.Alloc  Foreign.Marshal.Array  Foreign.Marshal.Unsafe  Foreign.Marshal.Utils  Foreign.Ptr  GHC.Base  GHC.Debug  GHC.Enum  GHC.Environment  GHC.Event.Clock  GHC.Event.Manager  GHC.Event.TimerManager  GHC.Exts  GHC.IO.Buffer  GHC.IO.Encoding.Latin1  GHC.IO.Exception  (+12 more)
gui-src/: Api.hs  Helpers.hs  fragnix-browse.hs  generate-elm.hs
gui-src/elm/: README.md  elm.js  elm.json  elm.min.js  optimize.sh  styles-rows.css  styles.css
module-declarations/: Main.hs
src/: Main.hs  declaration-slices.hs  flatten-names.hs  fragnix-test.hs  fragnix.hs  haskell-declarations.hs  haskell-modules.hs  instance-declarations.hs  module-declarations.hs  package-declarations.hs  package-modules.hs  slice-compiler.hs  test.hs
src/Fragnix/: Basket.hs  BuiltinPackages.hs  Compiler.hs  Config.hs  Declaration.hs  DeclarationLocalSlices.hs  DeclarationSlices.hs  DeclarationTempSlices.hs  Environment.hs  ForeignSlice.hs  FragnixModule.hs  GlobalScope.hs  HashLocalSlices.hs  HashTempSlices.hs  LanguageExtensions.hs  Loaf.hs  LocalSlice.hs  LocalSliceModule.hs  MetaEnvironment.hs  ModuleDeclarations.hs  Nest.hs  PackageDeclarations.hs  Paths.hs  Primitive.hs  Resolver.hs  Slice.hs  SliceCompiler.hs  SliceInstanceOptimization.hs  SliceInstanceResolution.hs  SliceSymbols.hs  Symbol.hs  Symbols.hs  Update.hs  (+1 more)
tests/: Tests.hs  compile.golden  writeSliceModulemainSlice.golden  writeSliceModuleputHelloSlice.golden  writeSlicemainSlice.golden  writeSliceputHelloSlice.golden
tests-src/: Main.hs
utilities-src/: create_builtin_environment.hs  fragnix-browse.hs  fragnix_hash_local_slices.hs
(+352 files in other folders)
