cabal-version:       2.2
name:                fragnix
version:             0.1.0.0
synopsis:            Immutable, fragment-based dependency management!
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              phischu
maintainer:          pschuster@uni-koblenz.de
-- copyright:
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
tested-with: GHC == 7.8.4, GHC == 7.10.1, GHC == 8.0.1

common shared-build-depends
  build-depends:       base >=4.6 && <4.15,
                       text >=1.2 && < 1.3,
                       filepath >=1.3 && < 1.6,
                       directory >=1.3 && < 1.4,
                       process >=1.6 && <1.7,
                       containers >=0.6 && <0.7,
                       haskell-src-exts >=1.23 && <1.24,
                       haskell-names >=0.9.0 && <0.10,
                       tagged >=0.7.2 && <0.10,
                       aeson >=1.4 && <1.5,
                       aeson-pretty >= 0.8 && <0.9,
                       bytestring >=0.10.4.0 && <0.11,
                       hashable >=1.3 && <1.4,
                       transformers >=0.3.0.0 && <0.6
  default-language:    Haskell2010

library
  import:              shared-build-depends
  exposed-modules:     Fragnix.Slice,
                       Fragnix.LocalSlice,
                       Fragnix.Declaration,
                       Fragnix.ModuleDeclarations,
                       Fragnix.DeclarationLocalSlices,
                       Fragnix.HashLocalSlices,
                       Fragnix.SliceCompiler,
                       Fragnix.SliceInstanceOptimization,
                       Fragnix.Environment,
                       Fragnix.SliceSymbols,
                       Fragnix.Paths,
                       Fragnix.Utils,
                       Fragnix.Update
                       Fragnix.Core.Slice
                       Fragnix.Core.Update
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall


executable fragnix
  import:              shared-build-depends
  main-is:             Main.hs
  other-modules:       Build,
                       CreateEnv,
                       Update,
                       Paths_fragnix,
                       Utils,
                       Get,
                       Show,
                       Init,
                       Remove
  build-depends:       clock >=0.8 && <0.9,
                       optparse-applicative >=0.15 && <0.16,
                       req >= 3.2.0 && < 3.10,
                       tar >= 0.5.1.1 && < 0.6,
                       zlib >= 0.6.2.1 && < 0.7,
                       fragnix
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts

test-suite test
  import:              shared-build-depends
  main-is:             Main.hs
  build-depends:       tasty >=1.2 && <1.4,
                       tasty-golden >=2.2.2.4 && <2.4,
                       fragnix
  hs-source-dirs:      tests-src
  ghc-options:         -O2
  type:                exitcode-stdio-1.0


benchmark benchmark
  import:              shared-build-depends
  main-is:             Main.hs
  build-depends:       criterion >=1.5 && <1.6,
                       deepseq >=1.4.1.2 && <1.6,
                       fragnix
  hs-source-dirs:      benchmarks-src
  ghc-options:         -O2
  type:                exitcode-stdio-1.0
